--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/johndv82/SistemaBoletosCine#readme",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "socket.io": "^4.7.5"
