--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "mongoose": "^8.6.2",
+    "sistemaboletoscine": "file:",
     "socket.io": "^4.7.5"
   }
 }
